# pico-synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.c
filter-test/: cheb_16bit  cheb_16bit.c  cheblpf  cheblpf.c  cheby-coefs.py  cheby-test.py  fir-test.py  h.txt
hardware/electronics/: #auto_saved_files#  PicoSynth.kicad_pcb  PicoSynth.kicad_prl  PicoSynth.kicad_pro  PicoSynth.kicad_sch  PicoSynth_BOM.csv  PicoSynth_BOM.xlsx  Pico_Synth_Ali_BOM.xlsx  README.md  fp-info-cache  freerouting.dsn  temp-freerouting.dsn  ~PicoSynth.kicad_sch.lck
hardware/electronics/Fab/: PicoSynth-B_Cu.gbr  PicoSynth-B_Mask.gbr  PicoSynth-B_Paste.gbr  PicoSynth-B_Silkscreen.gbr  PicoSynth-Edge_Cuts.gbr  PicoSynth-F_Cu.gbr  PicoSynth-F_Mask.gbr  PicoSynth-F_Paste.gbr  PicoSynth-F_Silkscreen.gbr  PicoSynth-NPTH.drl  PicoSynth-PTH.drl  PicoSynth-job.gbrjob
hardware/hardware_tester/: main.py  readme.md  rotary_encoder.py  ssd1306.py
hardware/spice_simulations/: Low-Pass_Filter.asc  Low-Pass_Filter.net  Low-Pass_Filter.raw
src/: Envelope.cpp  Envelope.hpp  Filter.cpp  Filter.hpp  HardwareManager.cpp  HardwareManager.hpp  MidiHandler.cpp  MidiHandler.hpp  Oscillator.cpp  Oscillator.hpp  Synth.cpp  Synth.hpp  Wavetable.cpp  Wavetable.hpp  config.hpp  fixed_point.h  i2s_init.cpp  i2s_init.hpp  main.cpp  optimizations.cpp  ssd1306.c  ssd1306.h  tusb_config.h  usb_descriptors.c
